src/tests/snapshots/niri__tests__window_opening__check_target_size@dhP0.5-t.snap
---
source: src/tests/window_opening.rs
description: "default window height: P0.5\ntabbed"
expression: snapshot
---
initial configure:
size: 607 × 336, bounds: 1239 × 688, states: []

post-map configures:
size: 607 × 336, bounds: 1239 × 688, states: [Activated]
