src/tests/snapshots/niri__tests__window_opening__check_target_size@dhU-b-t.snap
---
source: src/tests/window_opening.rs
description: "default window height: U\nborder on\ntabbed"
expression: snapshot
---
initial configure:
size: 599 × 680, bounds: 1231 × 680, states: []

post-map configures:
size: 599 × 680, bounds: 1231 × 680, states: [Activated]
