src/tests/snapshots/niri__tests__window_opening__check_target_size@dhU-b-wfsAN.snap
---
source: src/tests/window_opening.rs
description: "default window height: U\nborder on\nwant fullscreen: AN"
expression: snapshot
---
initial configure:
size: 608 × 680, bounds: 1240 × 680, states: []

post-map configures:
size: 1280 × 720, bounds: 1240 × 680, states: [Fullscreen]
size: 1280 × 720, bounds: 1240 × 680, states: [Fullscreen, Activated]

unfullscreen configure:
size: 608 × 680, bounds: 1240 × 680, states: [Activated]
